--- a/H1EMU-Redux - BUILD 1/H1EMU-Redux/MsgBox.xaml
+++ b/H1EMU-Redux - BUILD 1/H1EMU-Redux/MsgBox.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:H1EMU_Redux"
         mc:Ignorable="d"
-        Title="Launcher" x:Name="MainMsgBox" Height="180" Width="350" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF2A2A32" AllowsTransparency="True" FontFamily="Bahnschrift Light" FontSize="16" ResizeMode="NoResize">
+        Title="Launcher" x:Name="MainMsgBox" Height="210" Width="350" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF2A2A32" AllowsTransparency="True" FontFamily="Bahnschrift Light" FontSize="16" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10*"/>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="30*"/>
         </Grid.RowDefinitions>
 
@@ -43,9 +43,16 @@
         <!-- Grid for main content inside of darkened area -->
         <Grid Grid.Row="1" Background="#1C1B22" Margin="15,5,15,15">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="21*"/>
+                <RowDefinition Height="8*"/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="text" Background="Transparent" Foreground="White" Margin="10,0,10,0" VerticalAlignment="Center" TextWrapping="Wrap" TextAlignment="Center" Padding="0,5,0,0"/>
+
+            <Button Content="OK" Foreground="White" FontFamily="Arial Black" FontSize="18" Click="OkButton" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" BorderThickness="0" Style="{DynamicResource StandardButton}">
+                <Button.Background>
+                    <ImageBrush ImageSource="Resources\StandardButton.png"/>
+                </Button.Background>
+            </Button>
         </Grid>
     </Grid>
 </Window>
