Display current app version in settings
I've also figured out how to compile the application into a single exe. It seems to be working fine

--- a/H1EMU-Redux - BUILD 1/H1EMU-Redux/Login.xaml
+++ b/H1EMU-Redux - BUILD 1/H1EMU-Redux/Login.xaml
@@ -9,6 +9,8 @@
       FontFamily="Bahnschrift Light"
       UseLayoutRounding="True"
       Title="Login">
+    
+    <!-- Main Grid -->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
