--- a/H1EMU-Redux Launcher/H1EMU-Redux/Launcher.xaml
+++ b/H1EMU-Redux Launcher/H1EMU-Redux/Launcher.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:H1EMU_Redux"
         mc:Ignorable="d"
         UseLayoutRounding="True"
-        Title="Launcher" x:Name="MainLauncher" MinHeight="650" MinWidth="1300" Height="750" Width="1280" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF2A2A32" AllowsTransparency="True" FontFamily="Bahnschrift Light" FontSize="16" ResizeMode="NoResize" Loaded="Window_Loaded" Closed="MainLauncher_Closed">
+        Title="Launcher" x:Name="MainLauncher" MinHeight="650" MinWidth="1300" Height="750" Width="1280" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF2A2A32" AllowsTransparency="True" FontFamily="Bahnschrift Light" FontSize="16" ResizeMode="NoResize" Loaded="Window_Loaded" Closed="MainLauncher_Closed" Closing="MainLauncher_Closing">
     
     <!--Main Grid-->
     <Grid>
@@ -53,7 +53,7 @@
                     <WrapPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right">
                         <TextBlock VerticalAlignment="Center" Margin="0,10,16,0">
                             <Hyperlink NavigateUri="" Click="AboutHyperlink">
-                                About This Project?
+                                About the project...
                             </Hyperlink>
                         </TextBlock>
                         <!--Wraps the control box components-->
@@ -76,13 +76,13 @@
                     
                     <!--Wraps the promtional website/discord components-->
                     <WrapPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                        <TextBlock Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,25,0" TextWrapping="Wrap">
+                        <TextBlock Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,25,10" TextWrapping="Wrap">
                             Join the Community at
                             <Hyperlink NavigateUri="https://h1emu.com/" RequestNavigate="H1Hyperlink">
                                 h1emu.com
                             </Hyperlink>
                         </TextBlock>
-                        <Button x:Name="discordLink" Width="160" Height="44" VerticalAlignment="Center" Click="OpenDiscord" HorizontalAlignment="Right" Margin="0,0,35,0" Grid.Column="1" BorderThickness="0" Style="{DynamicResource DiscordButtonStyle}">
+                        <Button x:Name="discordLink" Width="160" Height="44" VerticalAlignment="Center" Click="OpenDiscord" HorizontalAlignment="Right" Margin="0,0,35,5" Grid.Column="1" BorderThickness="0" Style="{DynamicResource DiscordButtonStyle}">
                             <Button.Background>
                                 <ImageBrush RenderOptions.BitmapScalingMode="HighQuality"  ImageSource="Resources\Discord.png"/>
                             </Button.Background>
@@ -93,7 +93,7 @@
         </Grid>
 
         <!--Grid to split the content in half -->
-        <Grid Grid.Row="1" Background="#1C1B22" Margin="35,20,35,0">
+        <Grid Grid.Row="1" Background="#1C1B22" Margin="35,10,35,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -134,7 +134,7 @@
                 <RichTextBox x:Name="patchNotesBox" Background="Transparent" Foreground="White" BorderThickness="0" Margin="0,10,0,0" IsReadOnly="True" Height="95" Cursor="Arrow"/>
 
                 <!--Hyperlink text to redirect to more udpates-->
-                <TextBlock Margin="6,15,0,0">
+                <TextBlock Margin="6,20,0,0">
                     <Hyperlink NavigateUri="https://github.com/H1emu/h1z1-server/commits/master" RequestNavigate="FullUpdatesHyperlink">
                         View full details of the update...
                     </Hyperlink>
@@ -142,7 +142,7 @@
             </StackPanel>
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="210*"/>
+                    <RowDefinition Height="220*"/>
                     <RowDefinition Height="355*"/>
                 </Grid.RowDefinitions>
                 <StackPanel Margin="25,20,30,0">
