--- a/H1EMU-Redux Launcher/H1EMU-Redux/AboutPage.xaml
+++ b/H1EMU-Redux Launcher/H1EMU-Redux/AboutPage.xaml
@@ -52,13 +52,13 @@
                         Lead Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Kentin (2015 - 2016 Server) -
+                        - Kentin -
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Co-Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Meme (2016 Server) -
+                        - Meme (2016 Server) - Avcio (2015 Server) -
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Administrators
@@ -70,7 +70,7 @@
                         Contributers
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Avcio - Eavilaswayce - Relish - LegendsNeveerrDie - Delusional - KOBUNIX - Rhett - ZamZam - UTIL_TRACELINE - LordWaycrest  - 69_HaxMax - GinnessForever - Chriis - dark_night - Flo -
+                        - Eavilaswayce - Relish - LegendsNeveerrDie - Delusional - KOBUNIX - Rhett - ZamZam - UTIL_TRACELINE - LordWaycrest  - 69_HaxMax - GinnessForever - Chriis - dark_night - Flo -
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Moderators
