Typos and email 2fa fix

--- a/H1EMU-Redux Launcher/H1EMU-Redux/AboutPage.xaml
+++ b/H1EMU-Redux Launcher/H1EMU-Redux/AboutPage.xaml
@@ -52,37 +52,37 @@
                         Lead Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Kentin (2015 - 2016 Server) -
+                        • Kentin (2015 - 2016 Server) •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Co-Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Meme (2016 Server) -
+                        • Meme (2016 Server) •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Administrators
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Kentin - LcplReaper - Traqnar -
+                        • Kentin • LcplReaper • Traqnar •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
-                        Contributers
+                        Contributors
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Avcio - Eavilaswayce - Relish - LegendsNeveerrDie - Delusional - KOBUNIX - Rhett - ZamZam - UTIL_TRACELINE - LordWaycrest  - 69_HaxMax - GinnessForever - Chriis - dark_night - Flo -
+                        • Avcio • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest • 69_HaxMax • GinnessForever • Chriis • Flo •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Moderators
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - Meme - Chrisisbrown - Cur7 - Movezie - Skoz -
+                        • Meme • Chrisisbrown • Cur7 • Movezie • Skoz •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Support
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        - rob138us -
+                        • rob138us •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18" FontWeight="Bold" TextDecorations="Underline" Margin="0,100,0,0">
                         And a special thanks to everyone who joined the community and kept the motivation alive!
