--- a/H1EMU-Launcher/AboutPage.xaml
+++ b/H1EMU-Launcher/AboutPage.xaml
@@ -67,7 +67,7 @@
                         • Kentin • LcplReaper • Traqnar •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
-                        Contributers
+                        Contributors
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
                         • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • dark_night • Flo •
