--- a/H1EMU-Launcher/AboutPage.xaml
+++ b/H1EMU-Launcher/AboutPage.xaml
@@ -70,7 +70,7 @@
                         Contributors
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • dark_night • Flo •
+                        • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Moderators
