--- a/H1EMU-Launcher/GameInfo.xaml
+++ b/H1EMU-Launcher/GameInfo.xaml
@@ -9,7 +9,7 @@
       FontFamily="Bahnschrift Light"
       Title="GameInfo">
     <Grid>
-        <RichTextBox FontSize="16" Background="Transparent" BorderThickness="0" Foreground="White">
+        <RichTextBox FontSize="16" Background="Transparent" BorderThickness="0" Foreground="White" IsReadOnly="True" Cursor="Arrow">
             <FlowDocument>
                 <Paragraph TextAlignment="Center">
                     Which version of
